{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 156,
  "lineage": "df16b43b-9b55-dd15-3d9e-dc5d8e154374",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "internal_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:600018317388:security-group/sg-07d91898200adc040",
            "description": "Managed by Terraform",
            "filter": [
              {
                "name": "group-name",
                "values": [
                  "internal_sg"
                ]
              }
            ],
            "id": "sg-07d91898200adc040",
            "name": "internal_sg",
            "tags": {},
            "vpc_id": "vpc-00ef7cdb3b35365a8"
          }
        }
      ]
    },
    {
      "module": "module.ec2mongo.module.vpc_lookups",
      "mode": "data",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:600018317388:security-group/sg-05b5ce8e0211d48b2",
            "description": "jumphost_sg",
            "filter": [
              {
                "name": "group-name",
                "values": [
                  "tier1_sg"
                ]
              }
            ],
            "id": "sg-05b5ce8e0211d48b2",
            "name": "tier1_sg",
            "tags": {},
            "vpc_id": "vpc-00ef7cdb3b35365a8"
          }
        }
      ]
    },
    {
      "module": "module.vpc_lookups",
      "mode": "data",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:600018317388:security-group/sg-05b5ce8e0211d48b2",
            "description": "jumphost_sg",
            "filter": [
              {
                "name": "group-name",
                "values": [
                  "tier1_sg"
                ]
              }
            ],
            "id": "sg-05b5ce8e0211d48b2",
            "name": "tier1_sg",
            "tags": {},
            "vpc_id": "vpc-00ef7cdb3b35365a8"
          }
        }
      ]
    },
    {
      "module": "module.ec2mongo",
      "mode": "data",
      "type": "aws_security_group",
      "name": "tier_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:600018317388:security-group/sg-05b5ce8e0211d48b2",
            "description": "jumphost_sg",
            "filter": [
              {
                "name": "group-name",
                "values": [
                  "tier1_sg"
                ]
              }
            ],
            "id": "sg-05b5ce8e0211d48b2",
            "name": "tier1_sg",
            "tags": {},
            "vpc_id": "vpc-00ef7cdb3b35365a8"
          }
        }
      ]
    },
    {
      "module": "module.ec2mongo",
      "mode": "data",
      "type": "aws_security_group",
      "name": "vpc_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:600018317388:security-group/sg-0881ee7e0049e3778",
            "description": "Allows all access to jumphost",
            "filter": [
              {
                "name": "group-name",
                "values": [
                  "vpc_sg"
                ]
              }
            ],
            "id": "sg-0881ee7e0049e3778",
            "name": "vpc_sg",
            "tags": {},
            "vpc_id": "vpc-00ef7cdb3b35365a8"
          }
        }
      ]
    },
    {
      "module": "module.ec2mongo.module.ec2creation",
      "mode": "data",
      "type": "aws_subnet",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:600018317388:subnet/subnet-05720c0efc6da721f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.19.1.0/24",
            "default_for_az": false,
            "id": "subnet-05720c0efc6da721f",
            "map_public_ip_on_launch": false,
            "owner_id": "600018317388",
            "state": "available",
            "tags": {
              "Name": "internal-private-1a",
              "Tier": "Private"
            },
            "vpc_id": "vpc-00ef7cdb3b35365a8"
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:600018317388:subnet/subnet-04de21d1f988a620f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.19.2.0/24",
            "default_for_az": false,
            "id": "subnet-04de21d1f988a620f",
            "map_public_ip_on_launch": false,
            "owner_id": "600018317388",
            "state": "available",
            "tags": {
              "Name": "internal-private-1b",
              "Tier": "Private"
            },
            "vpc_id": "vpc-00ef7cdb3b35365a8"
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:600018317388:subnet/subnet-0dade806ff69dd053",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "172.19.3.0/24",
            "default_for_az": false,
            "id": "subnet-0dade806ff69dd053",
            "map_public_ip_on_launch": false,
            "owner_id": "600018317388",
            "state": "available",
            "tags": {
              "Name": "internal-private-1c",
              "Tier": "Private"
            },
            "vpc_id": "vpc-00ef7cdb3b35365a8"
          }
        }
      ]
    },
    {
      "module": "module.ec2mongo.module.vpc_lookups",
      "mode": "data",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:600018317388:subnet/subnet-07e2dd62d48f0280d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "172.19.0.0/24",
            "default_for_az": false,
            "filter": [
              {
                "name": "cidrBlock",
                "values": [
                  "172.19.0.0/24"
                ]
              }
            ],
            "id": "subnet-07e2dd62d48f0280d",
            "map_public_ip_on_launch": false,
            "owner_id": "600018317388",
            "state": "available",
            "tags": {
              "Name": "Public Subnet"
            },
            "vpc_id": "vpc-00ef7cdb3b35365a8"
          }
        }
      ]
    },
    {
      "module": "module.vpc_lookups",
      "mode": "data",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:600018317388:subnet/subnet-07e2dd62d48f0280d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "172.19.0.0/24",
            "default_for_az": false,
            "filter": [
              {
                "name": "cidrBlock",
                "values": [
                  "172.19.0.0/24"
                ]
              }
            ],
            "id": "subnet-07e2dd62d48f0280d",
            "map_public_ip_on_launch": false,
            "owner_id": "600018317388",
            "state": "available",
            "tags": {
              "Name": "Public Subnet"
            },
            "vpc_id": "vpc-00ef7cdb3b35365a8"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:600018317388:vpc/vpc-00ef7cdb3b35365a8",
            "cidr_block": "172.19.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0f0a27c80d6f88edb",
                "cidr_block": "172.19.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-4bf75920",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "filter": [
              {
                "name": "cidr",
                "values": [
                  "172.19.0.0/16"
                ]
              }
            ],
            "id": "vpc-00ef7cdb3b35365a8",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0511dfb6af759ae58",
            "owner_id": "600018317388",
            "state": "available",
            "tags": {
              "Name": "common_vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.ec2mongo.module.vpc_lookups",
      "mode": "data",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:600018317388:vpc/vpc-00ef7cdb3b35365a8",
            "cidr_block": "172.19.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0f0a27c80d6f88edb",
                "cidr_block": "172.19.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-4bf75920",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "filter": [
              {
                "name": "cidr",
                "values": [
                  "172.19.0.0/16"
                ]
              }
            ],
            "id": "vpc-00ef7cdb3b35365a8",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0511dfb6af759ae58",
            "owner_id": "600018317388",
            "state": "available",
            "tags": {
              "Name": "common_vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc_lookups",
      "mode": "data",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:600018317388:vpc/vpc-00ef7cdb3b35365a8",
            "cidr_block": "172.19.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0f0a27c80d6f88edb",
                "cidr_block": "172.19.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-4bf75920",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "filter": [
              {
                "name": "cidr",
                "values": [
                  "172.19.0.0/16"
                ]
              }
            ],
            "id": "vpc-00ef7cdb3b35365a8",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0511dfb6af759ae58",
            "owner_id": "600018317388",
            "state": "available",
            "tags": {
              "Name": "common_vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.ec2mongo.module.ec2creation",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-04533a956b5618422",
            "domain": "vpc",
            "id": "eipalloc-028b9e106ad48f233",
            "instance": "i-0509f890cffc259e6",
            "network_interface": "eni-05d497780c2cda716",
            "private_dns": "ip-172-19-1-254.us-east-2.compute.internal",
            "private_ip": "172.19.1.254",
            "public_dns": "ec2-3-21-8-57.us-east-2.compute.amazonaws.com",
            "public_ip": "3.21.8.57",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.ec2mongo.module.ec2creation.aws_instance.instance",
            "module.ec2mongo.module.ec2creation.aws_network_interface.eni"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-023890d8dc19490d5",
            "domain": "vpc",
            "id": "eipalloc-0700a7cd607fd11ed",
            "instance": "i-02a896f3ac2fb209e",
            "network_interface": "eni-07eb57c7f4233080e",
            "private_dns": "ip-172-19-2-224.us-east-2.compute.internal",
            "private_ip": "172.19.2.224",
            "public_dns": "ec2-3-23-124-238.us-east-2.compute.amazonaws.com",
            "public_ip": "3.23.124.238",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.ec2mongo.module.ec2creation.aws_instance.instance",
            "module.ec2mongo.module.ec2creation.aws_network_interface.eni"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0fd32b7175bd56e9c",
            "domain": "vpc",
            "id": "eipalloc-03c89f3088cd4f1b0",
            "instance": "i-08c7d498221220eb3",
            "network_interface": "eni-05edfc103982e4eac",
            "private_dns": "ip-172-19-3-23.us-east-2.compute.internal",
            "private_ip": "172.19.3.23",
            "public_dns": "ec2-3-22-203-195.us-east-2.compute.amazonaws.com",
            "public_ip": "3.22.203.195",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.ec2mongo.module.ec2creation.aws_instance.instance",
            "module.ec2mongo.module.ec2creation.aws_network_interface.eni"
          ]
        }
      ]
    },
    {
      "module": "module.ec2mongo.module.ec2creation",
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f7919c33c90f5b58",
            "arn": "arn:aws:ec2:us-east-2:600018317388:instance/i-0509f890cffc259e6",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0509f890cffc259e6",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "deployer-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-05d497780c2cda716"
              }
            ],
            "primary_network_interface_id": "eni-05d497780c2cda716",
            "private_dns": "ip-172-19-1-254.us-east-2.compute.internal",
            "private_ip": "172.19.1.254",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-02222d4f98ae3badb",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05720c0efc6da721f",
            "tags": {
              "Name": "mongodb00-wf1",
              "component": "mongodb",
              "env_subtype": "dev",
              "role": "mongodb"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05b5ce8e0211d48b2",
              "sg-07d91898200adc040",
              "sg-0881ee7e0049e3778",
              "sg-0d33ea2cf467292ae"
            ]
          },
          "dependencies": [
            "module.ec2mongo.module.ec2creation.aws_network_interface.eni"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f7919c33c90f5b58",
            "arn": "arn:aws:ec2:us-east-2:600018317388:instance/i-02a896f3ac2fb209e",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02a896f3ac2fb209e",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "deployer-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-07eb57c7f4233080e"
              }
            ],
            "primary_network_interface_id": "eni-07eb57c7f4233080e",
            "private_dns": "ip-172-19-2-224.us-east-2.compute.internal",
            "private_ip": "172.19.2.224",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0131b40c113bd7c77",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04de21d1f988a620f",
            "tags": {
              "Name": "mongodb01-wf1",
              "component": "mongodb",
              "env_subtype": "dev",
              "role": "mongodb"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05b5ce8e0211d48b2",
              "sg-07d91898200adc040",
              "sg-0881ee7e0049e3778",
              "sg-0d33ea2cf467292ae"
            ]
          },
          "dependencies": [
            "module.ec2mongo.module.ec2creation.aws_network_interface.eni"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f7919c33c90f5b58",
            "arn": "arn:aws:ec2:us-east-2:600018317388:instance/i-08c7d498221220eb3",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08c7d498221220eb3",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "deployer-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-05edfc103982e4eac"
              }
            ],
            "primary_network_interface_id": "eni-05edfc103982e4eac",
            "private_dns": "ip-172-19-3-23.us-east-2.compute.internal",
            "private_ip": "172.19.3.23",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-05b08032f4fad91e5",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dade806ff69dd053",
            "tags": {
              "Name": "mongodb02-wf1",
              "component": "mongodb",
              "env_subtype": "dev",
              "role": "mongodb"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05b5ce8e0211d48b2",
              "sg-07d91898200adc040",
              "sg-0881ee7e0049e3778",
              "sg-0d33ea2cf467292ae"
            ]
          },
          "dependencies": [
            "module.ec2mongo.module.ec2creation.aws_network_interface.eni"
          ]
        }
      ]
    },
    {
      "module": "module.ec2mongo.module.ec2creation",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "eni",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "eni-05d497780c2cda716",
            "mac_address": "02:25:7b:c5:9a:4a",
            "private_dns_name": "ip-172-19-1-254.us-east-2.compute.internal",
            "private_ip": "172.19.1.254",
            "private_ips": [
              "172.19.1.254"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-05b5ce8e0211d48b2",
              "sg-07d91898200adc040",
              "sg-0881ee7e0049e3778",
              "sg-0d33ea2cf467292ae"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05720c0efc6da721f",
            "tags": {
              "_ReservedDnsName": "mongodb00-wf1"
            }
          },
          "dependencies": [
            "aws_security_group.mongodb_external_sg"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "eni-07eb57c7f4233080e",
            "mac_address": "06:bc:cc:da:b7:9e",
            "private_dns_name": "ip-172-19-2-224.us-east-2.compute.internal",
            "private_ip": "172.19.2.224",
            "private_ips": [
              "172.19.2.224"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-05b5ce8e0211d48b2",
              "sg-07d91898200adc040",
              "sg-0881ee7e0049e3778",
              "sg-0d33ea2cf467292ae"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04de21d1f988a620f",
            "tags": {
              "_ReservedDnsName": "mongodb01-wf1"
            }
          },
          "dependencies": [
            "aws_security_group.mongodb_external_sg"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "eni-05edfc103982e4eac",
            "mac_address": "0a:30:87:03:f3:ec",
            "private_dns_name": "ip-172-19-3-23.us-east-2.compute.internal",
            "private_ip": "172.19.3.23",
            "private_ips": [
              "172.19.3.23"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-05b5ce8e0211d48b2",
              "sg-07d91898200adc040",
              "sg-0881ee7e0049e3778",
              "sg-0d33ea2cf467292ae"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dade806ff69dd053",
            "tags": {
              "_ReservedDnsName": "mongodb02-wf1"
            }
          },
          "dependencies": [
            "aws_security_group.mongodb_external_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mongodb_external_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:600018317388:security-group/sg-0d33ea2cf467292ae",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d33ea2cf467292ae",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 27017
              }
            ],
            "name": "mongodb_external_sg",
            "name_prefix": null,
            "owner_id": "600018317388",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-00ef7cdb3b35365a8"
          }
        }
      ]
    }
  ]
}